--- a/trial_source/src/main/resources/templates/attendance/update.html
+++ b/trial_source/src/main/resources/templates/attendance/update.html
@@ -23,7 +23,8 @@
 
 			<form th:action="@{/attendance/update}" method="post">
 				<table class="table table-hover dataTable no-footer">
-					<thead>
+					<!-- 村田智大 – Task.29-->
+					<thead style="display:block;">
 						<tr>
 							<th class="w140">日付</th>
 							<th class="w300">コース内容</th>
@@ -34,7 +35,8 @@
 							<th class="w240">備考</th>
 						</tr>
 					</thead>
-					<tbody>
+					<!-- 村田智大 – Task.29-->
+					<tbody style="display:block; overflow-y:scroll; max-height: 550px;">
 						<th:block th:each="dailyAttendanceForm, stat : *{attendanceForm.attendanceList}">
 							<tr>
 								<th:block>
