add:村田智大 Task.25 勤怠管理画面に新規ダイアログを追加しました。
勤怠管理画面表示時に過去日付の出勤時間、退勤時間に未入力がある場合、確認ダイアログが表示されるように改修しました。

--- a/trial_source/src/main/resources/templates/attendance/detail.html
+++ b/trial_source/src/main/resources/templates/attendance/detail.html
@@ -88,5 +88,11 @@
 		}
 	</script>
 
+	<!-- 村田智大 - Task.25 -->
+	<p th:if="${isTrainingTimeEmpty}">
+		<script>
+			window.onload = showTraingTimeEmptyAlert;
+		</script>
+	</p>
 </body>
 </html>
