--- a/trial_source/src/main/resources/templates/attendance/update.html
+++ b/trial_source/src/main/resources/templates/attendance/update.html
@@ -49,9 +49,23 @@
 								</th:block>
 								<td class="w140">[[${dailyAttendanceForm.dispTrainingDate}]]</td>
 								<td class="w300">[[${dailyAttendanceForm.sectionName}]]</td>
+								<!--
 								<td class="w70">
 									<input type="text" th:name="|attendanceList[${stat.index}].trainingStartTime|"
 									th:value="${dailyAttendanceForm.trainingStartTime}" class="form-control" />
+								</td>
+								-->
+								<td class="w70">
+									<select th:name="|attendanceList[${stat.index}].trainingStartTimeHH|" class="form-control">
+										<option th:each="hourMap : ${attendanceForm.hourMaps}" th:value="${hourMap.key}" th:inlne="text" class="form-control" 
+											th:selected="${hourMap.value == dailyAttendanceForm.trainingStartTimeHH}">[[${hourMap.value}]]</option>
+									</select>
+								</td>
+								<td class="w70">
+									<select th:name="|attendanceList[${stat.index}].trainingStartTimeMM|" class="form-control">
+										<option th:each="minuteMap : ${attendanceForm.minuteMaps}" th:value="${minuteMap.key}" th:inlne="text" class="form-control" 
+											th:selected="${minuteMap.value == dailyAttendanceForm.trainingStartTimeMM}">[[${minuteMap.value}]]</option>
+									</select>
 								</td>
 								<td class="w70">
 									<input type="text" th:name="|attendanceList[${stat.index}].trainingEndTime|"
